Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1 id="timerText">Pomodoro</h1>
-        <div id="timer" class="paused">25:00</div>
+        <div id="timer" class="paused"></div>
         
         <div id="buttons">
             <button id="startButton">Iniciar</button>
