Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Pomodoro</title>
 </head>
 <body>
-    ‹div class="animated-background"></div> 
+    <div class="animated-background"></div> 
     <div class="container">
         <h1 id="timerText">Pomodoro</h1>
         <div id="timer" class="paused"></div>
